Start template speed improvement

--- a/cmd/frontend/templates/admin/delays.gohtml
+++ b/cmd/frontend/templates/admin/delays.gohtml
@@ -1,12 +1,12 @@
 {{define "delays"}}
-    {{ template "_header" . }}
+    {{ template "header" . }}
 
     <div class="container" id="admin-delays-page">
 
-        {{ template "_flashes" . }}
+        {{ template "flashes" . }}
 
         <div class="card">
-            {{ template "_admin_header" . }}
+            {{ template "admin_header" . }}
             <div class="card-body">
 
                 <div class="table-responsive">
@@ -31,5 +31,5 @@
 
     </div>
 
-    {{ template "_footer" . }}
+    {{ template "footer" . }}
 {{end}}
