--- a/cmd/frontend/templates/admin/settings.gohtml
+++ b/cmd/frontend/templates/admin/settings.gohtml
@@ -1,12 +1,12 @@
 {{define "settings"}}
-    {{ template "_header" . }}
+    {{ template "header" . }}
 
     <div class="container" id="admin-settings-page">
 
-        {{ template "_flashes" . }}
+        {{ template "flashes" . }}
 
         <div class="card">
-            {{ template "_admin_header" . }}
+            {{ template "admin_header" . }}
             <div class="card-body">
 
                 <form action="/admin/settings" method="post">
@@ -33,5 +33,5 @@
 
     </div>
 
-    {{ template "_footer" . }}
+    {{ template "footer" . }}
 {{end}}
