--- a/cmd/frontend/templates/api.gohtml
+++ b/cmd/frontend/templates/api.gohtml
@@ -1,5 +1,5 @@
 {{define "api"}}
-    {{ template "_header" . }}
+    {{ template "header" . }}
 
     <div class="container" id="api-page">
 
@@ -12,7 +12,7 @@
 
         </div>
 
-        {{ template "_flashes" . }}
+        {{ template "flashes" . }}
 
         <div class="card">
             <div class="card-header">
@@ -34,5 +34,5 @@
 
     </div>
 
-    {{ template "_footer" . }}
+    {{ template "footer" . }}
 {{end}}
