--- a/cmd/frontend/templates/apps_achievements.gohtml
+++ b/cmd/frontend/templates/apps_achievements.gohtml
@@ -1,6 +1,6 @@
 {{define "apps_achievements"}}
 
-    {{ template "_header" . }}
+    {{ template "header" . }}
 
     <div class="container" id="apps-achievements-page">
 
@@ -29,10 +29,10 @@
             </div>
         </div>
 
-        {{ template "_flashes" . }}
+        {{ template "flashes" . }}
 
         <div class="card">
-            {{ template "_apps_header" . }}
+            {{ template "apps_header" . }}
             <div class="card-body">
 
                 <div class="table-responsive">
@@ -57,5 +57,5 @@
 
     </div>
 
-    {{ template "_footer" . }}
+    {{ template "footer" . }}
 {{end}}
