--- a/cmd/frontend/templates/bundle.gohtml
+++ b/cmd/frontend/templates/bundle.gohtml
@@ -1,5 +1,5 @@
 {{define "bundle"}}
-    {{ template "_header" . }}
+    {{ template "header" . }}
 
     <div class="container" id="bundle-page" data-path="{{ .Bundle.GetPath }}" data-id="{{ .Bundle.ID }}">
 
@@ -14,7 +14,7 @@
             </small>
         </div>
 
-        {{ template "_flashes" . }}
+        {{ template "flashes" . }}
 
         <div class="card">
 
@@ -119,5 +119,5 @@
 
     </div>
 
-    {{ template "_footer" . }}
+    {{ template "footer" . }}
 {{end}}
