--- a/cmd/frontend/templates/coop.gohtml
+++ b/cmd/frontend/templates/coop.gohtml
@@ -1,5 +1,5 @@
 {{define "coop"}}
-    {{ template "_header" . }}
+    {{ template "header" . }}
 
     <div class="container" id="coop-page">
 
@@ -25,7 +25,7 @@
             </div>
         </div>
 
-        {{ template "_flashes" . }}
+        {{ template "flashes" . }}
 
         <div class="card">
             <div class="card-body">
@@ -93,5 +93,5 @@
 
     </div>
 
-    {{ template "_footer" . }}
+    {{ template "footer" . }}
 {{end}}
