--- a/cmd/frontend/templates/disabled.gohtml
+++ b/cmd/frontend/templates/disabled.gohtml
@@ -1,5 +1,5 @@
 {{define "info"}}
-    {{ template "_header" . }}
+    {{ template "header" . }}
 
     <div class="container" id="info-page">
 
@@ -7,11 +7,11 @@
             <h1><i class="fas fa-times-circle"></i> Site Disabled</h1>
         </div>
 
-        {{ template "_flashes" . }}
+        {{ template "flashes" . }}
 
         xx
 
     </div>
 
-    {{ template "_footer" . }}
+    {{ template "footer" . }}
 {{end}}
