--- a/cmd/frontend/templates/donate.gohtml
+++ b/cmd/frontend/templates/donate.gohtml
@@ -1,5 +1,5 @@
 {{define "donate"}}
-    {{ template "_header" . }}
+    {{ template "header" . }}
 
     <div class="container" id="donate-page">
 
@@ -20,7 +20,7 @@
             </a>
         </div>
 
-        {{ template "_flashes" . }}
+        {{ template "flashes" . }}
 
         <div class="card">
             <div class="card-body">
@@ -142,5 +142,5 @@
 
     </div>
 
-    {{ template "_footer" . }}
+    {{ template "footer" . }}
 {{end}}
