--- a/cmd/frontend/templates/experience.gohtml
+++ b/cmd/frontend/templates/experience.gohtml
@@ -1,5 +1,5 @@
 {{define "experience"}}
-    {{ template "_header" . }}
+    {{ template "header" . }}
 
     <div class="container" id="experience-page">
 
@@ -11,7 +11,7 @@
             </p>
         </div>
 
-        {{ template "_flashes" . }}
+        {{ template "flashes" . }}
 
         <div class="card">
             <div class="card-body">
@@ -81,5 +81,5 @@
         </script>
     {{end}}
 
-    {{ template "_footer" . }}
+    {{ template "footer" . }}
 {{end}}
