--- a/cmd/frontend/templates/includes/admin_header.gohtml
+++ b/cmd/frontend/templates/includes/admin_header.gohtml
@@ -1,4 +1,4 @@
-{{define "_admin_header"}}
+{{ define "admin_header" }}
 
     <div class="card-header">
         <ul class="nav nav-tabs card-header-tabs nav-fill-mobile" role="tablist">
