--- a/cmd/frontend/templates/includes/flashes.gohtml
+++ b/cmd/frontend/templates/includes/flashes.gohtml
@@ -1,4 +1,4 @@
-{{define "_flashes"}}
+{{define "flashes"}}
 
     {{ if gt (len .FlashesGood) 0 }}
         <div class="alert alert-success" role="alert" id="flashes-good">
