--- a/cmd/frontend/templates/includes/players_header.gohtml
+++ b/cmd/frontend/templates/includes/players_header.gohtml
@@ -1,4 +1,4 @@
-{{define "_players_header"}}
+{{define "players_header"}}
 
     <!--suppress HtmlUnknownAnchorTarget -->
     <div class="card-header">
