--- a/cmd/frontend/templates/includes/stats_header.gohtml
+++ b/cmd/frontend/templates/includes/stats_header.gohtml
@@ -1,4 +1,4 @@
-{{define "_stats_header"}}
+{{define "stats_header"}}
 
     <div class="card-header">
         <ul class="nav nav-tabs card-header-tabs" role="tablist">
