--- a/cmd/frontend/templates/product_keys.gohtml
+++ b/cmd/frontend/templates/product_keys.gohtml
@@ -1,5 +1,5 @@
 {{define "product_keys"}}
-    {{ template "_header" . }}
+    {{ template "header" . }}
 
     <div class="container" id="product-keys-page">
 
@@ -23,7 +23,7 @@
             </div>
         </div>
 
-        {{ template "_flashes" . }}
+        {{ template "flashes" . }}
 
         <div class="card">
             <div class="card-header">
@@ -176,5 +176,5 @@
 
     </div>
 
-    {{ template "_footer" . }}
+    {{ template "footer" . }}
 {{end}}
