--- a/cmd/frontend/templates/signup.gohtml
+++ b/cmd/frontend/templates/signup.gohtml
@@ -1,5 +1,5 @@
 {{define "signup"}}
-    {{ template "_header" . }}
+    {{ template "header" . }}
 
     <script src='https://www.google.com/recaptcha/api.js'></script>
 
@@ -10,10 +10,10 @@
             <p class="lead">Signup for a personalised experience.</p>
         </div>
 
-        {{ template "_flashes" . }}
+        {{ template "flashes" . }}
 
         <div class="card">
-            {{ template "_login_header" . }}
+            {{ template "login_header" . }}
             <div class="card-body">
 
                 <div class="tab-content">
@@ -61,5 +61,5 @@
 
     </div>
 
-    {{ template "_footer" . }}
+    {{ template "footer" . }}
 {{end}}
