--- a/cmd/frontend/templates/upcoming.gohtml
+++ b/cmd/frontend/templates/upcoming.gohtml
@@ -1,5 +1,5 @@
 {{define "upcoming"}}
-    {{ template "_header" . }}
+    {{ template "header" . }}
 
     <div class="container" id="upcoming-page">
 
@@ -29,10 +29,10 @@
             </div>
         </div>
 
-        {{ template "_flashes" . }}
+        {{ template "flashes" . }}
 
         <div class="card">
-            {{ template "_apps_header" . }}
+            {{ template "apps_header" . }}
             <div class="card-body">
 
                 <div class="table-responsive">
@@ -61,5 +61,5 @@
         </div>
 
     </div>
-    {{ template "_footer" . }}
+    {{ template "footer" . }}
 {{end}}
