--- a/cmd/frontend/templates/achievements.gohtml
+++ b/cmd/frontend/templates/achievements.gohtml
@@ -1,6 +1,6 @@
 {{define "achievements"}}
 
-    {{ template "_header" . }}
+    {{ template "header" . }}
 
     <div class="container" id="achievements-page">
 
@@ -29,7 +29,7 @@
             </div>
         </div>
 
-        {{ template "_flashes" . }}
+        {{ template "flashes" . }}
 
         <div class="card">
             <div class="card-body">
@@ -54,5 +54,5 @@
 
     </div>
 
-    {{ template "_footer" . }}
+    {{ template "footer" . }}
 {{end}}
