--- a/cmd/frontend/templates/app.gohtml
+++ b/cmd/frontend/templates/app.gohtml
@@ -1,11 +1,11 @@
 {{define "app"}}
-    {{ template "_header" . }}
+    {{ template "header" . }}
 
     <div class="container" id="app-page" data-group-id="{{ .App.GroupID }}" data-bg="{{ .App.Background }}" data-id="{{ .App.ID }}" data-path="{{ .App.GetPath }}">
 
         <div class="jumbotron">
 
-            {{ template "_social" .App }}
+            {{ template "social" .App }}
 
             <h1 class="text-truncate"><i class="fas fa-gamepad"></i> {{ .App.GetName }}</h1>
 
@@ -21,7 +21,7 @@
             </small>
         </div>
 
-        {{ template "_flashes" . }}
+        {{ template "flashes" . }}
 
         <div class="card">
             <div class="card-header text-white">
@@ -1211,5 +1211,5 @@
 
     </div>
 
-    {{ template "_footer" . }}
+    {{ template "footer" . }}
 {{end}}
