--- a/cmd/frontend/templates/apps.gohtml
+++ b/cmd/frontend/templates/apps.gohtml
@@ -1,5 +1,5 @@
 {{define "apps"}}
-    {{ template "_header" . }}
+    {{ template "header" . }}
 
     <div class="container" id="apps-page">
 
@@ -33,10 +33,10 @@
             </div>
         </div>
 
-        {{ template "_flashes" . }}
+        {{ template "flashes" . }}
 
         <div class="card">
-            {{ template "_apps_header" . }}
+            {{ template "apps_header" . }}
             <div class="card-body">
 
                 <div class="row">
@@ -169,5 +169,5 @@
 
     </div>
 
-    {{ template "_footer" . }}
+    {{ template "footer" . }}
 {{end}}
