--- a/cmd/frontend/templates/badges.gohtml
+++ b/cmd/frontend/templates/badges.gohtml
@@ -1,5 +1,5 @@
 {{define "badges"}}
-    {{ template "_header" . }}
+    {{ template "header" . }}
 
     <div class="container" id="badges-page">
 
@@ -7,7 +7,7 @@
             <h1><i class="fas fa-ribbon"></i> Badges</h1>
         </div>
 
-        {{ template "_flashes" . }}
+        {{ template "flashes" . }}
 
         <div class="card">
             <div class="card-header">
@@ -161,5 +161,5 @@
 
     </div>
 
-    {{ template "_footer" . }}
+    {{ template "footer" . }}
 {{end}}
