--- a/cmd/frontend/templates/bundles.gohtml
+++ b/cmd/frontend/templates/bundles.gohtml
@@ -1,5 +1,5 @@
 {{define "bundles"}}
-    {{ template "_header" . }}
+    {{ template "header" . }}
 
     <div class="container" id="bundles-page">
 
@@ -7,10 +7,10 @@
             <h1><i class="fas fa-cubes"></i> Bundles</h1>
         </div>
 
-        {{ template "_flashes" . }}
+        {{ template "flashes" . }}
 
         <div class="card">
-            {{ template "_packages_header" . }}
+            {{ template "packages_header" . }}
             <div class="card-body">
 
                 {{/* Bundles List */}}
@@ -37,5 +37,5 @@
 
     </div>
 
-    {{ template "_footer" . }}
+    {{ template "footer" . }}
 {{end}}
