--- a/cmd/frontend/templates/change.gohtml
+++ b/cmd/frontend/templates/change.gohtml
@@ -1,5 +1,5 @@
 {{define "change"}}
-    {{ template "_header" . }}
+    {{ template "header" . }}
 
     <div class="container" id="change-page">
 
@@ -7,7 +7,7 @@
             <h1><i class="fas fa-exchange-alt"></i> {{ .Change.GetName }}</h1>
         </div>
 
-        {{ template "_flashes" . }}
+        {{ template "flashes" . }}
 
         <div class="card">
             <div class="card-body">
@@ -60,5 +60,5 @@
 
     </div>
 
-    {{ template "_footer" . }}
+    {{ template "footer" . }}
 {{end}}
