--- a/cmd/frontend/templates/chat.gohtml
+++ b/cmd/frontend/templates/chat.gohtml
@@ -1,5 +1,5 @@
 {{define "chat"}}
-    {{ template "_header" . }}
+    {{ template "header" . }}
 
     <div class="container" id="chat-page">
 
@@ -11,7 +11,7 @@
             <p class="lead">See what's going on, on our <a target="_blank" rel="noopener" href="https://discord.gg/c5zrcus">Discord chat server</a>.</p>
         </div>
 
-        {{ template "_flashes" . }}
+        {{ template "flashes" . }}
 
         <div class="card mb-3">
             <div class="card-header">Members</div>
@@ -50,5 +50,5 @@
 
     </div>
 
-    {{ template "_footer" . }}
+    {{ template "footer" . }}
 {{end}}
