--- a/cmd/frontend/templates/contact.gohtml
+++ b/cmd/frontend/templates/contact.gohtml
@@ -1,5 +1,5 @@
 {{define "contact"}}
-    {{ template "_header" . }}
+    {{ template "header" . }}
 
     <script src='https://www.google.com/recaptcha/api.js'></script>
 
@@ -10,7 +10,7 @@
             <p class="lead">{{ .Description }}</p>
         </div>
 
-        {{ template "_flashes" . }}
+        {{ template "flashes" . }}
 
         <div class="card">
             <div class="card-body">
@@ -63,5 +63,5 @@
 
     </div>
 
-    {{ template "_footer" . }}
+    {{ template "footer" . }}
 {{end}}
