--- a/cmd/frontend/templates/depot.gohtml
+++ b/cmd/frontend/templates/depot.gohtml
@@ -1,5 +1,5 @@
 {{define "depot"}}
-    {{ template "_header" . }}
+    {{ template "header" . }}
 
     <div class="container" id="depot-page">
 
@@ -7,7 +7,7 @@
             <h1><i class="fas fa-box-open"></i> Depot {{ .Depot.ID }}</h1>
         </div>
 
-        {{ template "_flashes" . }}
+        {{ template "flashes" . }}
 
         <div class="card">
             <div class="card-body">
@@ -19,5 +19,5 @@
 
     </div>
 
-    {{ template "_footer" . }}
+    {{ template "footer" . }}
 {{end}}
