--- a/cmd/frontend/templates/groups.gohtml
+++ b/cmd/frontend/templates/groups.gohtml
@@ -1,5 +1,5 @@
 {{define "groups"}}
-    {{ template "_header" . }}
+    {{ template "header" . }}
 
     <div class="container" id="groups-page">
 
@@ -27,7 +27,7 @@
             </div>
         </div>
 
-        {{ template "_flashes" . }}
+        {{ template "flashes" . }}
 
         <div class="card">
             <div class="card-body">
@@ -74,5 +74,5 @@
 
     </div>
 
-    {{ template "_footer" . }}
+    {{ template "footer" . }}
 {{end}}
