--- a/cmd/frontend/templates/info.gohtml
+++ b/cmd/frontend/templates/info.gohtml
@@ -1,5 +1,5 @@
 {{define "info"}}
-    {{ template "_header" . }}
+    {{ template "header" . }}
 
     <div class="container" id="info-page">
 
@@ -7,7 +7,7 @@
             <h1><i class="fas fa-info-circle"></i> Info</h1>
         </div>
 
-        {{ template "_flashes" . }}
+        {{ template "flashes" . }}
 
         <div class="card">
             <div class="card-body">
@@ -133,5 +133,5 @@
 
     </div>
 
-    {{ template "_footer" . }}
+    {{ template "footer" . }}
 {{end}}
