--- a/cmd/frontend/templates/queues.gohtml
+++ b/cmd/frontend/templates/queues.gohtml
@@ -1,5 +1,5 @@
 {{define "queues"}}
-    {{ template "_header" . }}
+    {{ template "header" . }}
 
     <div class="container" id="queues-page">
 
@@ -10,7 +10,7 @@
 
         </div>
 
-        {{ template "_flashes" . }}
+        {{ template "flashes" . }}
 
         <div class="card">
             <div class="card-header">
@@ -71,5 +71,5 @@
 
     </div>
 
-    {{ template "_footer" . }}
+    {{ template "footer" . }}
 {{end}}
