--- a/cmd/frontend/templates/settings.gohtml
+++ b/cmd/frontend/templates/settings.gohtml
@@ -1,5 +1,5 @@
 {{define "settings"}}
-    {{ template "_header" . }}
+    {{ template "header" . }}
 
     <script src='https://www.google.com/recaptcha/api.js'></script>
 
@@ -9,7 +9,7 @@
             <h1><i class="fas fa-cog"></i> Settings</h1>
         </div>
 
-        {{ template "_flashes" . }}
+        {{ template "flashes" . }}
 
         <div class="card">
             <div class="card-header">
@@ -279,5 +279,5 @@
         {{ end }}
     </script>
 
-    {{ template "_footer" . }}
+    {{ template "footer" . }}
 {{end}}
