--- a/cmd/frontend/templates/steam_api.gohtml
+++ b/cmd/frontend/templates/steam_api.gohtml
@@ -1,5 +1,5 @@
 {{define "steam_api"}}
-    {{ template "_header" . }}
+    {{ template "header" . }}
 
     <!--suppress HtmlFormInputWithoutLabel -->
     <div class="container" id="steam-api-page">
@@ -13,7 +13,7 @@
             </small>
         </div>
 
-        {{ template "_flashes" . }}
+        {{ template "flashes" . }}
 
         <div class="card">
             <div class="card-body">
@@ -156,5 +156,5 @@
 
     </div>
 
-    {{ template "_footer" . }}
+    {{ template "footer" . }}
 {{end}}
