--- a/cmd/frontend/templates/terms.gohtml
+++ b/cmd/frontend/templates/terms.gohtml
@@ -1,5 +1,5 @@
 {{define "terms"}}
-    {{ template "_header" . }}
+    {{ template "header" . }}
 
     <div class="container" id="info-page">
 
@@ -7,7 +7,7 @@
             <h1><i class="fas fa-info-circle"></i> Terms of Service</h1>
         </div>
 
-        {{ template "_flashes" . }}
+        {{ template "flashes" . }}
 
         <div class="card">
             <div class="card-body">
@@ -27,5 +27,5 @@
 
     </div>
 
-    {{ template "_footer" . }}
+    {{ template "footer" . }}
 {{end}}
