--- a/cmd/frontend/templates/wishlists.gohtml
+++ b/cmd/frontend/templates/wishlists.gohtml
@@ -1,5 +1,5 @@
 {{define "wishlists"}}
-    {{ template "_header" . }}
+    {{ template "header" . }}
 
     <div class="container" id="wishlists-page">
 
@@ -31,7 +31,7 @@
 
         </div>
 
-        {{ template "_flashes" . }}
+        {{ template "flashes" . }}
 
         <div class="card">
             {{/*            <div class="card-header">*/}}
@@ -48,7 +48,7 @@
 
             {{/*                </ul>*/}}
             {{/*            </div>*/}}
-            {{ template "_apps_header" . }}
+            {{ template "apps_header" . }}
             <div class="card-body">
 
                 <div class="tab-content">
@@ -108,5 +108,5 @@
 
     </div>
 
-    {{ template "_footer" . }}
+    {{ template "footer" . }}
 {{end}}
