--- a/cmd/frontend/templates/home.gohtml
+++ b/cmd/frontend/templates/home.gohtml
@@ -94,7 +94,7 @@
                 <div class="card mb-4" id="tweets">
                     <h5 class="card-header">News <a href="https://twitter.com/gamedb_online" target="_blank" rel="noopener"><i class="fab fa-twitter float-right"></i></a></h5>
                     <div class="card-body">
-                        Coming Soon
+                        <i class="fas fa-spinner fa-spin"></i>
                     </div>
                     <a class="card-footer" href="https://twitter.com/gamedb_online" target="_blank" rel="noopener">@gamedb_online</a>
                 </div>
