--- a/cmd/frontend/assets/sass/_home.scss
+++ b/cmd/frontend/assets/sass/_home.scss
@@ -36,6 +36,12 @@ body.dark {
         i.fa-twitter, svg.fa-twitter {
             color: rgb(29, 161, 242);
         }
+
+        .tweet:last-child {
+            p {
+                margin-bottom: 0;
+            }
+        }
     }
 
     #players, #updated-players {
