Add foil badges to main table

--- a/cmd/frontend/templates/players.gohtml
+++ b/cmd/frontend/templates/players.gohtml
@@ -84,6 +84,7 @@
                             <th scope="col">Completed</th>
                             <th scope="col"></th> {{/* Link */}}
                             <th scope="col">Search Score</th>
+                            <th scope="col">Foil Badges</th>
                         </tr>
                         </thead>
                         <tbody>
