Update external links

--- a/cmd/frontend/templates/includes/footer.gohtml
+++ b/cmd/frontend/templates/includes/footer.gohtml
@@ -9,8 +9,9 @@
                 Version <a href="/commits">{{ .GetCommits }} Beta</a>.
                 <br>
                 <a href="https://twitter.com/gamedb_online" target="_blank" rel="noopener"><i class="fab fa-twitter"></i> Twitter</a> -
-                <a href="https://github.com/gamedb" target="_blank" rel="noopener"><i class="fab fa-github"></i> GitHub</a> -
-                <a href="https://www.patreon.com/jleagle" target="_blank" rel="noopener"><i class="fab fa-patreon"></i> Patreon</a>
+                <a href="https://www.patreon.com/jleagle" target="_blank" rel="noopener"><i class="fab fa-patreon"></i> Patreon</a> -
+                <a href="/discord-server" target="_blank" rel="noopener"><i class="fab fa-discord"></i> Discord</a> -
+                <a href="https://github.com/gamedb" target="_blank" rel="noopener"><i class="fab fa-github"></i> GitHub</a>
             </small>
         </div>
     </footer>
