--- a/cmd/frontend/templates/includes/header.gohtml
+++ b/cmd/frontend/templates/includes/header.gohtml
@@ -215,17 +215,20 @@
                         <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">More</a>
                         <div class="dropdown-menu">
 
+                            <a class="dropdown-item" href="https://twitter.com/gamedb_online" target="_blank" rel="noopener">Twitter <i class="fas fa-external-link-alt"></i></a>
+                            <a class="dropdown-item" href="https://www.patreon.com/jleagle" target="_blank" rel="noopener">Patreon <i class="fas fa-external-link-alt"></i></a>
                             <a class="dropdown-item" href="/discord-server" target="_blank" rel="noopener">Discord Server <i class="fas fa-external-link-alt"></i></a>
-                            <a class="dropdown-item" href="/discord-bot">Discord Bot</a>
+                            <a class="dropdown-item" href="https://github.com/gamedb" target="_blank" rel="noopener">GitHub <i class="fas fa-external-link-alt"></i></a>
 
                             <div class="dropdown-divider"></div>
 
                             <a class="dropdown-item" href="/experience">Experience Table</a>
                             <a class="dropdown-item" href="/achievements">Achievements Search</a>
+                            <a class="dropdown-item" href="/discord-bot">Discord Bot</a>
                             <a class="dropdown-item" href="/contact">Contact</a>
                             <a class="dropdown-item" href="/info">Info</a>
-                            <a class="dropdown-item" href="https://twitter.com/gamedb_online" target="_blank" rel="noopener">Twitter <i class="fas fa-external-link-alt"></i></a>
-                            <a class="dropdown-item" href="/api/gamedb">API</a>
+                            <a class="dropdown-item" href="/api/gamedb">API (Game DB)</a>
+                            <a class="dropdown-item" href="/api/steam">API (Steam)</a>
 
                         </div>
                     </li>
