Show steam release on groups chart

--- a/cmd/frontend/templates/app.gohtml
+++ b/cmd/frontend/templates/app.gohtml
@@ -472,7 +472,7 @@
                             <div class="card mb-4">
                                 <h5 class="card-header" id="followers">Followers</h5>
                                 <div class="card-body">
-                                    <div class="player-chart" id="group-chart">
+                                    <div class="player-chart" id="group-chart" data-release="{{ .App.ReleaseDateUnix }}">
                                         <i class="fas fa-spinner fa-spin"></i>
                                     </div>
                                 </div>
