--- a/cmd/frontend/templates/includes/stats_header.gohtml
+++ b/cmd/frontend/templates/includes/stats_header.gohtml
@@ -21,17 +21,17 @@
 
             <li class="nav-item">
                 {{if startsWith .Path "/tags" }}
-                    <span class="nav-link active" role="tab"><i class="fas fa-tag"></i> Tags</span>
+                    <span class="nav-link active" role="tab"><i class="fas fa-star"></i> Tags</span>
                 {{else}}
-                    <a class="nav-link" href="/tags" role="tab"><i class="fas fa-tag"></i> Tags</a>
+                    <a class="nav-link" href="/tags" role="tab"><i class="fas fa-star"></i> Tags</a>
                 {{end}}
             </li>
 
             <li class="nav-item">
                 {{if startsWith .Path "/genres" }}
-                    <span class="nav-link active" role="tab"><i class="fas fa-film"></i> Genres</span>
+                    <span class="nav-link active" role="tab"><i class="fas fa-star"></i> Genres</span>
                 {{else}}
-                    <a class="nav-link" href="/genres" role="tab"><i class="fas fa-film"></i> Genres</a>
+                    <a class="nav-link" href="/genres" role="tab"><i class="fas fa-star"></i> Genres</a>
                 {{end}}
             </li>
 
@@ -39,7 +39,7 @@
                 {{if startsWith .Path "/categories" }}
                     <span class="nav-link active" role="tab"><i class="fas fa-star"></i> Categories</span>
                 {{else}}
-                    <a class="nav-link" href="/categories" role="tab"><i class="fas fa-film"></i> Categories</a>
+                    <a class="nav-link" href="/categories" role="tab"><i class="fas fa-star"></i> Categories</a>
                 {{end}}
             </li>
 
