--- a/cmd/frontend/templates/stats_list.gohtml
+++ b/cmd/frontend/templates/stats_list.gohtml
@@ -33,7 +33,7 @@
             <div class="card-body">
 
                 <div class="table-responsive">
-                    <table class="table table-hover table-striped table-counts mb-0" data-row-type="{{ lower .Type.Plural }}" data-path="/stats/list.json">
+                    <table class="table table-hover table-striped table-counts mb-0" data-row-type="{{ lower .Type.Plural }}" data-path="/{{ .Type.MongoCol }}/list.json">
                         <thead class="thead-light">
                         <tr>
                             <th scope="col">{{ .Type.Title }}</th>
